--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cross-spawn": "^7.0.6",
     "debug": "^4.4.0",
     "deep-is": "^0.1.4",
+    "ejs": "^3.1.10",
     "escape-string-regexp": "^4.0.0",
     "eslint-scope": "^8.3.0",
     "eslint-visitor-keys": "^4.2.0",
