--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.5",
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.15.3",
+    "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.96",
+    "@types/node": "^20.11.7",
     "eslint": "^9.25.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "acorn": "^8.14.1",
@@ -27,6 +29,7 @@
     "ansi-styles": "^4.3.0",
     "argparse": "^2.0.1",
     "balanced-match": "^1.0.2",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "brace-expansion": "^1.1.11",
     "callsites": "^3.1.0",
@@ -37,6 +40,7 @@
     "cross-spawn": "^7.0.6",
     "debug": "^4.4.0",
     "deep-is": "^0.1.4",
+    "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "escape-string-regexp": "^4.0.0",
     "eslint-scope": "^8.3.0",
@@ -46,7 +50,7 @@
     "esrecurse": "^4.3.0",
     "estraverse": "^5.3.0",
     "esutils": "^2.0.3",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "fast-deep-equal": "^3.1.3",
     "fast-json-stable-stringify": "^2.1.0",
     "fast-levenshtein": "^2.0.6",
@@ -72,6 +76,7 @@
     "locate-path": "^6.0.0",
     "lodash.merge": "^4.6.2",
     "minimatch": "^3.1.2",
+    "mongoose": "^8.14.0",
     "ms": "^2.1.3",
     "natural-compare": "^1.4.0",
     "optionator": "^0.9.4",
