endpoints + password + authorize + swagger authorize

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URI=mongodb://admin:secret@localhost:27017/users_db?authSource=admin
 PORT=3000
+JWT_SECRET=your_strong_secret_here
+JWT_EXPIRES=1d
