--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^20.11.7",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "bcryptjs": "^3.0.2",
     "eslint": "^9.25.1",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -33,7 +36,6 @@
     "ansi-styles": "^4.3.0",
     "argparse": "^2.0.1",
     "balanced-match": "^1.0.2",
-    "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "brace-expansion": "^1.1.11",
     "callsites": "^3.1.0",
