--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ansi-styles": "^4.3.0",
     "argparse": "^2.0.1",
     "balanced-match": "^1.0.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^2.2.0",
     "brace-expansion": "^1.1.11",
     "callsites": "^3.1.0",
@@ -75,6 +76,7 @@
     "isexe": "^2.0.0",
     "js-yaml": "^4.1.0",
     "json-buffer": "^3.0.1",
+    "jsonwebtoken": "^9.0.2",
     "json-schema-traverse": "^0.4.1",
     "json-stable-stringify-without-jsonify": "^1.0.1",
     "keyv": "^4.5.4",
@@ -98,6 +100,7 @@
     "shebang-regex": "^3.0.0",
     "strip-json-comments": "^3.1.1",
     "supports-color": "^7.2.0",
+    "swagger-ui-express": "^5.0.0",
     "type-check": "^0.4.0",
     "uri-js": "^4.4.1",
     "which": "^2.0.2",
